# WAMCP

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start_services.py
app/: config.py  main.py
app/api/: admin.py  health.py  messages.py
app/db/: base.py  models.py  session.py
app/integrations/: minio_client.py  whatsapp_client.py
app/mcp/: server.py  tools.py
app/security/: webhook_verify.py
app/services/: document_extraction.py  ingest_service.py  structured_logging.py  whatsapp_messenger.py  whatsapp_parser.py
app/watchdog/: checks.py  main.py  notifications.py  remediation.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile.api  Dockerfile.mcp  Dockerfile.worker
infra/cloudflared/: README.md
migrations/: env.py
migrations/versions/: e6e1dae98ee8_add_watchdog_run.py  f977c57e5698_initial_schema.py
scripts/: clear_db.py  send_test_webhook.sh  send_whatsapp_message.sh  test_webhook.sh
tests/: conftest.py
tests/fixtures/whatsapp/raw/: status_group_sent_enveloped.json  text_message_enveloped_group.json  text_message_enveloped_individual.json  text_message_unwrapped_individual.json  (+1 more)
tests/integration/: test_admin_api.py  test_document_processing.py  test_ingestion.py  test_watchdog_integration.py
tests/smoke/: test_smoke.py
tests/unit/: test_admin_auth.py  test_config_env_aliases.py  test_document_extraction.py  test_plugin_mode.py  test_watchdog.py  test_whatsapp_config_validation.py  test_whatsapp_messenger_error_parsing.py  test_whatsapp_parser.py
